--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <html>
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="Web_Styling.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <head>
@@ -39,7 +39,7 @@
     <body>
         <div id="d01">
             <img id="i01" src="images/New Logo PPO.jpg">
-            <h1><i>Delivery & Information at Lightning Speed</i></h1>
+            <h1 id = "h01"><i>Delivery & Information at Lightning Speed</i></h1>
         </div>
         <ul>
             <li><a class="active" href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
