--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
         both customers and employees.">
         <title>Pakistan Post Homepage</title>
         <link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon" />
-    </head>
+    </head> 
     <script>
         var slideIndex = 1;
         showSlides(slideIndex);
@@ -43,7 +43,7 @@
         </div>
         <ul>
             <li><a class="active" href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
-            <li><a href="main.html"><i class="fa fa-fw fa-search"></i> Search</a></li> 
+            <li><a href="track-order.html"><i class="fa fa-fw fa-search"></i> Track Order</a></li> 
             <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a></li> 
         </ul>
         
@@ -71,9 +71,22 @@
         <span class="dot" onclick="currentSlide(2)"></span> 
         <span class="dot" onclick="currentSlide(3)"></span> 
       </div>
+      <br><br>
       <div id="d02">
           <h2 id="h02">About Us</h2>
-          <p><i>We started out as </i></p>
+          <br>
+          <p id="p01">Pakistan Post, is a state enterprise which functions as Pakistan's primary and largest postal operator.44,000 employees through a vehicle fleet of 5000 operate traditional "to the door" service from more than 13,000 post offices across the country, servicing over 50 million people. Pakistan Post operates under the autonomous "Postal Services Management Board" to deliver a full range of delivery, logistics and fulfillment services to customers. In addition to its traditional role, Pakistan Post also offers services such as Postal Life Insurance and Pakistan Post Savings Bank. It also operates services on behalf of the federal and provincial governments, by acting as a collection point for tax and utility bills.</p>
+      </div>
+      <div id="d03">
+        <h2 id="h03">Services We Offer</h2>
+        <br>
+        <ul id="u01">
+          <li><i class="fa fa-fw fa-plane"></i>International Shipping</li><br>
+          <li><i class="fa fa-fw fa-truck"></i>Domestic Shipping</li><br>
+          <li><i class="fa fa-fw fa-search"></i>Tracking Of Orders</li><br>
+          <li><i class="fa fa-fw fa-address-card"></i>Customer Registration</li><br>
+          <li><i class="fa fa-fw fa-shield"></i>100% Safe and Secure</li>
+        </ul>
       </div>
     </body>
 </html>
