changed css and html

--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
         </div>
         <ul>
             <li><a class="active" href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
-            <li><a href="track-order.html"><i class="fa fa-fw fa-search"></i> Track Order</a></li> 
+            <li><a href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li> 
             <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a></li> 
         </ul>
         
@@ -81,13 +81,27 @@
       <div id="d03">
         <h2 id="h03">Services We Offer</h2>
         <br>
-        <ul id="u01">
-          <li><i class="fa fa-fw fa-plane"></i>International Shipping</li><br>
-          <li><i class="fa fa-fw fa-truck"></i>Domestic Shipping</li><br>
-          <li><i class="fa fa-fw fa-search"></i>Tracking Of Orders</li><br>
-          <li><i class="fa fa-fw fa-address-card"></i>Customer Registration</li><br>
-          <li><i class="fa fa-fw fa-shield"></i>100% Safe and Secure</li>
+        <ul id="ul2">
+          <li id="li1"><i class="fa fa-fw fa-plane"></i>International Shipping</li><br><br>
+          <li id="li1"><i class="fa fa-fw fa-truck"></i>Domestic Shipping</li><br><br>
+          <li id="li1"><i class="fa fa-fw fa-search"></i>Tracking Of Orders</li><br><br>
+          <li id="li1"><i class="fa fa-fw fa-address-card"></i>Customer Registration</li><br><br>
+          <li id="li1"><i class="fa fa-fw fa-shield"></i>100% Safe and Secure</li>
         </ul>
+      </div>
+      <div class="footer">
+          <img src="images/Favicon.ico" style="float:left; height: 90%">
+          <div class="footer-elements">
+              <ul id="ul1">
+                  <li><a href="main.html"><label id="fit1">HOME</label></a></li>
+              </ul>
+              <ul id="ul1">
+                  <li><a href="register.html"><label id="fit1">REGISTER</label></a></li>
+              </ul>
+          </div>
+          <div class="footer1">
+                 <label id="cp1">Copyright@ 2019. Any stealing of content or illegal use of code shall lead to consequences.</label>
+          </div>
       </div>
     </body>
 </html>
