--- a/Register.html
+++ b/Register.html
@@ -57,7 +57,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input class="registerbtn" type="submit" name="submit" value="submit"></td>
+                    <td><input class="registerbtn" type="submit" name="register" value="register"></td>
                 </tr>
             </form>
         </table>
