changed a shit ton of things
1. Added shadows on different objects on the canvas.
2. Added parallax effect using a saturated material design background.
3. Adjusted font sizes.
4. Added CSS additional stuff.

--- a/Register.html
+++ b/Register.html
@@ -9,12 +9,12 @@
         <title>Pakistan Post Homepage</title>
         <link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon" />
     </head> 
-    <body>
+    <body class="bg-image">
         <div id="d01">
             <img id="i01" src="images/New Logo PPO.jpg">
             <h1 id = "h01"><i>Delivery & Information at Lightning Speed</i></h1>
         </div>
-        <ul>
+        <ul id="ul3">
             <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
             <li><a class="active" href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li> 
             <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a></li> 
@@ -26,7 +26,7 @@
                 <hr>
                 <tr>
                     <td><label>Name</label></td>
-                    <td><input type="text" name="name" value="" placeholder="Enter your kind name"></td>
+                    <td><input type="text" name="name" value="" placeholder="Enter Your Kind Name"></td>
                 </tr>
                 <tr>
                     <td><label>DOB</label></td>
@@ -57,7 +57,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input class="registerbtn" type="submit" name="register" value="register"></td>
+                    <td><input class="registerbtn" type="submit" name="submit" value="submit"></td>
                 </tr>
             </form>
         </table>
