changed some CSS and added more responsiveness

--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@
         </ul>
       </div>
       <div class="footer">
-          <img src="images/Favicon.ico" style="float:left; height: 90%">
+          <img src="images/Favicon.ico" class="footer-img">
           <div class="footer-elements">
               <ul id="ul1">
                   <li><a href="main.html"><label id="fit1">HOME</label></a></li>
