Yearly Fund Collection Form

--- a/Register.html
+++ b/Register.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="Web_Styling.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,9 +15,10 @@
             <h1 id = "h01"><i>Delivery & Information at Lightning Speed</i></h1>
         </div>
         <ul id="ul3">
-            <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
-            <li><a class="active" href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li> 
-            <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a></li> 
+            <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
+            <li><a class="active" href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li>
+            <li><a href="Earning.html"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li>
+
         </ul>
         <div id="d04">
             <h1 align="center">Registeration Form</h1>
