--- a/Earning.html
+++ b/Earning.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="Web_Styling.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,33 +15,35 @@
             <h1 id = "h01"><i>Delivery & Information at Lightning Speed</i></h1>
         </div>
         <ul id="ul3">
-            <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
-            <li><a class="active" href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li> 
-            <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a></li> 
+            <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
+            <li><a  href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li>
+            <li><a class="active" href="Earning.html"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li>
         </ul>
         <div id="d05">
-            <h1 align="center">Registeration Form</h1>
+            <h1 align="center">Annual Fund Collection</h1>
         <table align="center">
-            <form name="reg" action="./Register.php" method="post">
+            <form name="reg" action="./PPostYearlyFund.html" method="post">
                 <hr>
                 <tr>
-                    <td><input type="text" name="name" value="" placeholder="Enter Your Branch Postal Code"></td>
-                    <div class="dropdown">
-                        <span>Month(1-12)</span>
-                        <div class="dropdown-content">
-                        <p>1999</p>
-                        <p>2000</p>
-                        <p>2001</p>
-                        <p>2002</p>
-                        <p>2003</p>
-                        <p>2004</p>
-                        <p>2005</p>
-                        <p>2006</p>
-                        <p>2007</p>
-                        <p>2008</p>    
-                    </div>
-                      </div>
+                    <td><input type="text" name="name" value="" placeholder="Branch Postal Code"></td>
                 </tr>
+                    <td><div class="custom-select" style="width:200px;">
+            <select>
+                <option value="0">Year:</option>
+                <option value="1">1999</option>
+                <option value="2">2000</option>
+                <option value="3">2001</option>
+                <option value="4">2002</option>
+                <option value="5">2003</option>
+                <option value="6">2004</option>
+                <option value="7">2005</option>
+                <option value="8">2006</option>
+                <option value="9">2007</option>
+                <option value="10">2008</option>
+                <option value="11">2009</option>
+                <option value="12">2010</option>
+            </select>
+                    </div></td>
                 <tr>
                 <tr>
                     <td></td>
