--- a/html/Register.html
+++ b/html/Register.html
@@ -17,7 +17,7 @@
         <ul id="ul3">
             <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
             <li><a class="active" href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li>
-            <li><a href="Earning.html"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li>
+            <li><a href="Earning.php"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li>
 
         </ul>
         <div id="d04">
@@ -26,19 +26,19 @@
             <form name="reg" action="./Register.php" method="post">
                 <hr>
                 <tr>
-                    <td><label>Name</label></td>
+                    <td id="td2">Name</td>
                     <td><input type="text" name="name" value="" placeholder="Enter Your Kind Name"></td>
                 </tr>
                 <tr>
-                    <td><label>DOB</label></td>
+                    <td id="td2">DOB</td>
                     <td><input type="date" name="dob" value=""></td>
                 </tr>
                 <tr>
-                    <td><label>Address</label></td>
+                    <td id="td2">Address</td>
                     <td><input type="text" name="add" value="" placeholder="Your Address"></td>
                 </tr>
                 <tr>
-                    <td><label>Gender</label></td>
+                    <td id="td2">Gender</td>
                     <td>
                         <label id="td1">Male</label>
                         <input type="radio" name="gender" value="M">
@@ -49,11 +49,11 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><label>Email</label></td>
+                    <td id="td2">Email</td>
                     <td><input type="text" name="email" value="" placeholder="Your E-mail"></td>
                 </tr>
                 <tr>
-                    <td><label>Password</label></td>
+                    <td id="td2">Password</td>
                     <td><input type="password" name="pass" value="" placeholder="Enter Password of 5 digits"></td>
                 </tr>
                 <tr>
