fixed image links

--- a/html/PPostYearlyFund.html
+++ b/html/PPostYearlyFund.html
@@ -7,11 +7,11 @@
     <meta name="description" content="The Pakistan Post Webpage for
         both customers and employees.">
     <title>Pakistan Post Homepage</title>
-    <link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon" />
 </head>
 <body class="bg-image">
     <div id="d01">
-        <img id="i01" src="images/New Logo PPO.jpg">
+        <img id="i01" src="../images/New Logo PPO.jpg">
         <h1 id="h01"><i>Delivery & Information at Lightning Speed</i></h1>
     </div>
     <ul id="ul3">
@@ -45,7 +45,7 @@
         </table>
     </div>
     <div class="footer">
-        <img src="images/Favicon.ico" style="float:left; height: 90%">
+        <img src="../images/Favicon.ico" style="float:left; height: 90%">
         <div class="footer-elements">
             <ul id="ul1">
                 <li><a href="main.html"><label id="fit1">HOME</label></a></li>
