--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="The Pakistan Post Webpage for
         both customers and employees.">
         <title>Pakistan Post Homepage</title>
-        <link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <p>Japanese example: ご飯が熱い。</p>
