--- a/html/track-order.html
+++ b/html/track-order.html
@@ -7,11 +7,11 @@
         <meta name="description" content="The Pakistan Post Webpage for
         both customers and employees.">
         <title>Pakistan Post Homepage</title>
-        <link rel="shortcut icon" href="images/Favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon" />
     </head> 
     <body>
         <div id="d01">
-            <img id="i01" src="images/New Logo PPO.jpg">
+            <img id="i01" src="../images/New Logo PPO.jpg">
             <h1 id = "h01"><i>Delivery & Information at Lightning Speed</i></h1>
         </div>
         <ul>
