track-order changed

--- a/html/main.html
+++ b/html/main.html
@@ -46,6 +46,7 @@
             <li><a class="active" href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
             <li><a href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li> 
             <li><a href="Earning.php"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li> 
+            <li><a href="track-order.html"><i class="fa fa-fw fa-search"></i> Track Order</a></li>    
         </ul>
         
         <div class="slideshow-container">
