--- a/html/track-order.html
+++ b/html/track-order.html
@@ -1,24 +1,103 @@
 <html>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="Web_Styling.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="The Pakistan Post Webpage for
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link rel="stylesheet" href="Web_Styling.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="The Pakistan Post Webpage for
         both customers and employees.">
-        <title>Pakistan Post Homepage</title>
-        <link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon" />
-    </head> 
-    <body>
-        <div id="d01">
-            <img id="i01" src="../images/New Logo PPO.jpg">
-            <h1 id = "h01"><i>Delivery & Information at Lightning Speed</i></h1>
+    <title>Pakistan Post Homepage</title>
+    <link rel="shortcut icon" href="../images/Favicon.ico" type="image/x-icon" />
+</head>
+
+<body class="bg-image">
+    <div id="d01">
+        <img id="i01" src="../images/New Logo PPO.jpg">
+        <h1 id="h01"><i>Delivery & Information at Lightning Speed</i></h1>
+    </div>
+    <ul id="ul3">
+        <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
+        <li><a href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li>
+        <li><a href="Earning.php"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li>
+        <li><a class="active" href="track-order.html"><i class="fa fa-fw fa-search"></i> Track Order</a></li>
+    </ul>
+    <div id="d06">
+        <h1 align="center">Track Your Order</h1>
+        <form name="reg" action="Earning.php" method="post">
+            <table align="center">
+                <hr>
+                <tr>
+                    <td id="td2">Tracking Number:</td>
+                    <td><input type="text" name="brcode" value="" placeholder="E.g. 40001923"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+            </table>
+            <input class="registerbtn2" type="submit" name="Track" value="Track">
+        </form>
+        <hr>
+    </div>
+    <div id="div-1">
+        <h2 id="h04">Shipment Details</h2>
+        <table>
+            <tr>
+                <td id="td3">Agent Reference #:</td>
+            </tr>
+            <tr>
+                <td id="td3">Origin:</td>
+            </tr>
+            <tr>
+                <td id="td3">Destination:</td>
+            </tr>
+            <tr>
+                <td id="td3">Booking Date:</td>
+            </tr>
+            <tr>
+                <td id="td3">Shipper:</td>
+            </tr>
+            <tr>
+                <td id="td3">Consignee:</td>
+            </tr>
+        </table>
+    </div>
+    <div id="div-2">
+        <h2 id="h05">Shipment Tracking</h2>
+        <table>
+            <tr>
+                <td id="td3">Current Status:</td>
+            </tr>
+            <tr>
+                <td id="td3">Delivered On:</td>
+            </tr>
+            <tr>
+                <td id="td3">Signed By:</td>
+            </tr>
+        </table>
+    </div>
+    <br>
+    <div id="div-3">
+        <h2 id="h06">Track History</h2>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="footer">
+        <img src="../images/Favicon.ico" style="float:left; height: 90%">
+        <div class="footer-elements">
+            <ul id="ul1">
+                <li><a href="main.html"><label id="fit1">HOME</label></a></li>
+            </ul>
+            <ul id="ul1">
+                <li><a href="register.html"><label id="fit1">REGISTER</label></a></li>
+            </ul>
         </div>
-        <ul>
-            <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
-            <li><a class="active" href="track-order.html"><i class="fa fa-fw fa-search"></i> Track Order</a></li> 
-            <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a></li> 
-        </ul>
-        
-    </body>
+        <div class="footer1">
+            <label id="cp1">Copyright@ 2019. Any stealing of content or illegal use of code shall lead to
+                consequences.</label>
+        </div>
+    </div>
+</body>
+
 </html>
