track order updated

--- a/html/track-order.html
+++ b/html/track-order.html
@@ -79,6 +79,13 @@
     <br>
     <div id="div-3">
         <h2 id="h06">Track History</h2>
+        <table border="true" class="display-table2" align="center">
+            <tr>
+                <th>Date Time</th>
+                <th>Status</th>
+                <th>Location</th>
+            </tr>
+        </table>
     </div>
     <br>
     <br>
