--- a/html/Register.html
+++ b/html/Register.html
@@ -18,7 +18,8 @@
             <li><a href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li>
             <li><a class="active" href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li>
             <li><a href="Earning.php"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li>
-            <li><a href="track-order.html"><i class="fa fa-fw fa-search"></i> Track Order</a></li>    
+            <li><a href="track-order.php"><i class="fa fa-fw fa-search"></i> Track Order</a></li>
+            <li><a href="cutomer-transactions.html"><i class="fa fa-fw fa-history"></i> Customer Transactions</a></li>    
         </ul>
         <div id="d04">
             <h1 align="center">Registeration Form</h1>
