--- a/html/cutomer-transactions.html
+++ b/html/cutomer-transactions.html
@@ -53,7 +53,22 @@
         <h2 id="h08">Customer's Details</h2>
         <table class="display-table3" align="center">
             <tr>
-                <td id="td2">Customer Name:</td>
+                <td id="td4">Customer ID:</td>
+            </tr>
+            <tr>
+                <td id="td4">Customer Name:</td>
+            </tr>
+            <tr>
+                <td id="td4">Address:</td>
+            </tr>
+            <tr>
+                <td id="td4">City:</td>
+            </tr>
+            <tr>
+                <td id="td4">Mobile#:</td>
+            </tr>
+            <tr>
+                <td id="td4">CNIC:</td>
             </tr>
         </table>
     </div>
