--- a/html/main.html
+++ b/html/main.html
@@ -44,10 +44,10 @@
         </div>
         <ul id="ul3">
             <li><a class="active" href="main.html"><i class="fa fa-fw fa-home"></i> Home</a></li> 
-            <li><a href="Register.html"><i class="fa fa-fw fa-address-card"></i> Register Customer</a></li> 
+            <li><a href="Test.php"><i class="fa fa-fw fa-history"></i>Add Mail/Parcel</a></li> 
             <li><a href="Earning.php"><i class="fa fa-fw fa-envelope"></i> Yearly Funds Collection</a></li> 
             <li><a href="track-order.php"><i class="fa fa-fw fa-search"></i> Track Order</a></li>    
-            <li><a href="cutomer-transactions.html"><i class="fa fa-fw fa-history"></i> Customer Transactions</a></li>
+            <li><a href="CustomerTransaction.php"><i class="fa fa-fw fa-history"></i> Customer Transactions</a></li>
         </ul>
         
         <div class="slideshow-container">
@@ -62,7 +62,7 @@
         </div>
       
         <div class="mySlides fade">
-          <img src="images/stamps.jpg" style="width:100%; height:400px">
+          <img src="../images/stamps.jpg" style="width:100%; height:400px">
           <div class="text">International Shipping</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
