--- a/html/Invoice.html
+++ b/html/Invoice.html
@@ -25,10 +25,9 @@
                 Transactions</a></li>
     </ul>
     <div id="d06">
-        <div id = "custom-select">
             <form onsubmit="showInfo(document.getElementById('PostalCode').value); return false"  id="testform" >
                     <h1 align="center">Customer Transactions History</h1>
-                    <table class = "display-table" align="center">
+                    <table id="input_table" class="display-table7" align="center">
                         <tr>
                             <td id="td2">
                                 Barcode
@@ -37,8 +36,7 @@
                             </td>
                         </tr>
                     </table>
-            </form>
-        </div>            
+            </form>        
         <hr>
     </div>
     <div id="d06">
